<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="translate_item_base_word">Исходное слово: %1$s</string>
    <string name="translate_item_translation">Перевод: %1$s</string>
    <string name="main_page_title">Переводчик</string>
    <string name="base_word_tools_text">Исходное слово: нога</string>
    <string name="translation_word_tools_text">Перевод: leg</string>
    <string name="word_translation_text_tools">Нога</string>
    <string name="query_input_hint">Введите слово для перевода</string>
    <string name="translation_label_text">Перевод:</string>
    <string name="translation_not_found">Перевод для данного слова не найден</string>
    <string name="target_language">To</string>
    <string name="source_language">From</string>
</resources>