<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp">

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/search_icon"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:hint="@string/query_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/query_input"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/languages_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:gravity="fill"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/translation_menu_from_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/source_language"
            >

            <AutoCompleteTextView
                android:id="@+id/menu_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/languages_options"
                android:text="ru"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="40dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/translation_menu_to_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/target_language"
            >

            <AutoCompleteTextView
                android:id="@+id/menu_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/languages_options"
                android:text="en"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/current_translation_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/languages_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/current_translation_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/translate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp"
                    android:text="@string/translation_label_text"
                    />

                <TextView
                    android:id="@+id/word_translation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/translate_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text ="@string/word_translation_text_tools"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>